Phase instances now use a autogenetrated id not a composite key

--- a/src/Bundle/CoreBundle/Resources/config/doctrine/model/DiagnosisPhaseInstance.orm.yml
+++ b/src/Bundle/CoreBundle/Resources/config/doctrine/model/DiagnosisPhaseInstance.orm.yml
@@ -10,11 +10,10 @@ Accard\Component\Core\Model\DiagnosisPhaseInstance:
     table: accard_diagnosis_phase_instance
 
     id:
-        target:
-            associationKey: true
-        phase:
-            associationKey: true
-
+        id:
+            type: integer
+            generator:
+                strategy: AUTO
 
     fields:
         startDate:
