--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "twbs/bootstrap":                        "v3.2.0",
         "winzou/state-machine-bundle":           "~0.2",
         "friendsofsymfony/elastica-bundle":      "~3.1@dev",
-        "lexik/translation-bundle": "~2.0"
+        "lexik/translation-bundle":              "~2.0",
+        "gedmo/doctrine-extensions":             "2.3.11"
     }
 }
