--- a/src/Bundle/WebBundle/Resources/config/routing/frontend/attribute.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/frontend/attribute.yml
@@ -11,7 +11,7 @@ accard_frontend_attribute_index:
     defaults:
         _controller: accard.controller.attribute:indexAction
         _accard:
-            template: AccardWebBundle:Frontend/Attribute:index.html.twig
+            template: Theme:Frontend/Attribute:index.html.twig
             sortable: true
             paginate: 25
 
@@ -21,7 +21,7 @@ accard_frontend_attribute_index_by_prototype:
     defaults:
         _controller: accard.controller.attribute:indexByPrototypeAction
         _accard:
-            template: AccardWebBundle:Frontend/Attribute:indexByPrototype.html.twig
+            template: Theme:Frontend/Attribute:indexByPrototype.html.twig
             sortable: true
             criteria:
                 prototype: $prototype
@@ -34,7 +34,7 @@ accard_frontend_attribute_show:
     defaults:
         _controller: accard.controller.attribute:showAction
         _accard:
-            template: AccardWebBundle:Frontend/Attribute:show.html.twig
+            template: Theme:Frontend/Attribute:show.html.twig
 
 accard_frontend_attribute_create:
     pattern: /{prototype}/new
@@ -43,7 +43,7 @@ accard_frontend_attribute_create:
     defaults:
         _controller: accard.controller.attribute:createAction
         _accard:
-            template: AccardWebBundle:Frontend/Attribute:create.html.twig
+            template: Theme:Frontend/Attribute:create.html.twig
             redirect:
                 route: accard_frontend_attribute_index_by_prototype
                 parameters: { prototype: resource.prototype.name, id: resource.id }
@@ -55,7 +55,7 @@ accard_frontend_attribute_update:
     defaults:
         _controller: accard.controller.attribute:updateAction
         _accard:
-            template: AccardWebBundle:Frontend/Attribute:update.html.twig
+            template: Theme:Frontend/Attribute:update.html.twig
             redirect:
                 route: accard_frontend_attribute_index_by_prototype
                 parameters: { prototype: resource.prototype.name, id: resource.id }
@@ -67,7 +67,7 @@ accard_frontend_attribute_delete:
     defaults:
         _controller: accard.controller.attribute:deleteAction
         _accard:
-            template: AccardWebBundle:Frontend/Attribute:delete.html.twig
+            template: Theme:Frontend/Attribute:delete.html.twig
             redirect:
                 route: accard_frontend_attribute_index_by_prototype
                 parameters: { prototype: resource.prototype.name }
