--- a/src/Bundle/WebBundle/Resources/config/routing/frontend/behavior.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/frontend/behavior.yml
@@ -11,7 +11,7 @@ accard_frontend_behavior_index:
     defaults:
         _controller: accard.controller.behavior:indexAction
         _accard:
-            template: AccardWebBundle:Frontend/Behavior:index.html.twig
+            template: Theme:Frontend/Behavior:index.html.twig
             sortable: true
             paginate: 25
 
@@ -21,7 +21,7 @@ accard_frontend_behavior_index_by_prototype:
     defaults:
         _controller: accard.controller.behavior:indexByPrototypeAction
         _accard:
-            template: AccardWebBundle:Frontend/Behavior:indexByPrototype.html.twig
+            template: Theme:Frontend/Behavior:indexByPrototype.html.twig
             sortable: true
             criteria:
                 prototype: $prototype
@@ -34,7 +34,7 @@ accard_frontend_behavior_show:
     defaults:
         _controller: accard.controller.behavior:showAction
         _accard:
-            template: AccardWebBundle:Frontend/Behavior:show.html.twig
+            template: Theme:Frontend/Behavior:show.html.twig
 
 accard_frontend_behavior_create:
     pattern: /{prototype}/new
@@ -43,7 +43,7 @@ accard_frontend_behavior_create:
     defaults:
         _controller: accard.controller.behavior:createAction
         _accard:
-            template: AccardWebBundle:Frontend/Behavior:create.html.twig
+            template: Theme:Frontend/Behavior:create.html.twig
             redirect:
                 route: accard_frontend_behavior_index_by_prototype
                 parameters: { prototype: resource.prototype.name, id: resource.id }
@@ -55,7 +55,7 @@ accard_frontend_behavior_update:
     defaults:
         _controller: accard.controller.behavior:updateAction
         _accard:
-            template: AccardWebBundle:Frontend/Behavior:update.html.twig
+            template: Theme:Frontend/Behavior:update.html.twig
             redirect:
                 route: accard_frontend_behavior_index_by_prototype
                 parameters: { prototype: resource.prototype.name, id: resource.id }
@@ -67,7 +67,7 @@ accard_frontend_behavior_delete:
     defaults:
         _controller: accard.controller.behavior:deleteAction
         _accard:
-            template: AccardWebBundle:Frontend/Behavior:delete.html.twig
+            template: Theme:Frontend/Behavior:delete.html.twig
             redirect:
                 route: accard_frontend_behavior_index_by_prototype
                 parameters: { prototype: resource.prototype.name }
