--- a/src/Bundle/WebBundle/Resources/config/routing/frontend/regimen.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/frontend/regimen.yml
@@ -11,7 +11,7 @@ accard_frontend_regimen_index:
     defaults:
         _controller: accard.controller.regimen:indexAction
         _accard:
-            template: AccardWebBundle:Frontend/Regimen:index.html.twig
+            template: Theme:Frontend/Regimen:index.html.twig
             sortable: true
             paginate: 25
 
@@ -21,7 +21,7 @@ accard_frontend_regimen_index_by_prototype:
     defaults:
         _controller: accard.controller.regimen:indexByPrototypeAction
         _accard:
-            template: AccardWebBundle:Frontend/Regimen:indexByPrototype.html.twig
+            template: Theme:Frontend/Regimen:indexByPrototype.html.twig
             sortable: true
             criteria:
                 prototype: $prototype
@@ -34,7 +34,7 @@ accard_frontend_regimen_activities:
     defaults:
         _controller: accard.controller.regimen:activitiesAction
         _accard:
-            template: AccardWebBundle:Frontend/Regimen:activities.html.twig
+            template: Theme:Frontend/Regimen:activities.html.twig
             redirect:
                 route: accard_frontend_regimen_index_by_prototype
                 parameters: { prototype: resource.prototype.name, id: resource.id }
@@ -46,7 +46,7 @@ accard_frontend_regimen_show:
     defaults:
         _controller: accard.controller.regimen:showAction
         _accard:
-            template: AccardWebBundle:Frontend/Regimen:show.html.twig
+            template: Theme:Frontend/Regimen:show.html.twig
 
 accard_frontend_regimen_create:
     pattern: /{prototype}/new
@@ -55,7 +55,7 @@ accard_frontend_regimen_create:
     defaults:
         _controller: accard.controller.regimen:createAction
         _accard:
-            template: AccardWebBundle:Frontend/Regimen:create.html.twig
+            template: Theme:Frontend/Regimen:create.html.twig
             redirect:
                 route: accard_frontend_regimen_index_by_prototype
                 parameters: { prototype: resource.prototype.name, id: resource.id }
@@ -67,7 +67,7 @@ accard_frontend_regimen_update:
     defaults:
         _controller: accard.controller.regimen:updateAction
         _accard:
-            template: AccardWebBundle:Frontend/Regimen:update.html.twig
+            template: Theme:Frontend/Regimen:update.html.twig
             redirect:
                 route: accard_frontend_regimen_index_by_prototype
                 parameters: { prototype: resource.prototype.name, id: resource.id }
@@ -79,7 +79,7 @@ accard_frontend_regimen_delete:
     defaults:
         _controller: accard.controller.regimen:deleteAction
         _accard:
-            template: AccardWebBundle:Frontend/Regimen:delete.html.twig
+            template: Theme:Frontend/Regimen:delete.html.twig
             redirect:
                 route: accard_frontend_regimen_index_by_prototype
                 parameters: { prototype: resource.prototype.name }
