--- a/src/Bundle/WebBundle/Resources/config/routing/frontend/sample.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/frontend/sample.yml
@@ -11,7 +11,7 @@ accard_frontend_sample_index:
     defaults:
         _controller: accard.controller.sample:indexAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:index.html.twig
+            template: Theme:Frontend/Sample:index.html.twig
             sortable: true
             paginate: 25
 
@@ -21,7 +21,7 @@ accard_frontend_sample_source_collection_index:
     defaults:
         _controller: accard.controller.sample_source:indexAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:sourceIndex.html.twig
+            template: Theme:Frontend/Sample:sourceIndex.html.twig
             sortable: true
             method: createCollectionPaginator
             paginate: 25
@@ -32,7 +32,7 @@ accard_frontend_sample_source_derivation_index:
     defaults:
         _controller: accard.controller.sample_source:indexAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:sourceIndex.html.twig
+            template: Theme:Frontend/Sample:sourceIndex.html.twig
             sortable: true
             method: createDerivationPaginator
             paginate: 25
@@ -43,7 +43,7 @@ accard_frontend_sample_index_by_prototype:
     defaults:
         _controller: accard.controller.sample:indexByPrototypeAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:indexByPrototype.html.twig
+            template: Theme:Frontend/Sample:indexByPrototype.html.twig
             sortable: true
             criteria:
                 prototype: $prototype
@@ -56,7 +56,7 @@ accard_frontend_sample_source_collection_show:
     defaults:
         _controller: accard.controller.sample_source:showAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:showSource.html.twig
+            template: Theme:Frontend/Sample:showSource.html.twig
 
 accard_frontend_sample_source_derivation_show:
     pattern: /derivation/{id}
@@ -65,7 +65,7 @@ accard_frontend_sample_source_derivation_show:
     defaults:
         _controller: accard.controller.sample_source:showAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:showSource.html.twig
+            template: Theme:Frontend/Sample:showSource.html.twig
 
 accard_frontend_sample_show:
     pattern: /{prototype}/{id}
@@ -74,7 +74,7 @@ accard_frontend_sample_show:
     defaults:
         _controller: accard.controller.sample:showAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:show.html.twig
+            template: Theme:Frontend/Sample:show.html.twig
 
 accard_frontend_sample_source_collection_create:
     pattern: /collection/new
@@ -83,7 +83,7 @@ accard_frontend_sample_source_collection_create:
         _controller: accard.controller.sample_source:createAction
         _accard:
             form: accard_sample_source_collection
-            template: AccardWebBundle:Frontend/Sample:sourceCreate.html.twig
+            template: Theme:Frontend/Sample:sourceCreate.html.twig
             redirect: accard_frontend_sample_source_collection_index
 
 accard_frontend_sample_source_derivation_create:
@@ -92,7 +92,7 @@ accard_frontend_sample_source_derivation_create:
     defaults:
         _controller: accard.controller.sample_source:createAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:sourceCreate.html.twig
+            template: Theme:Frontend/Sample:sourceCreate.html.twig
             redirect: accard_frontend_sample_source_derivation_index
             form: accard_sample_source_derivation
 
@@ -103,7 +103,7 @@ accard_frontend_sample_create:
     defaults:
         _controller: accard.controller.sample:createAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:create.html.twig
+            template: Theme:Frontend/Sample:create.html.twig
             redirect:
                 route: accard_frontend_sample_index_by_prototype
                 parameters: { prototype: resource.prototype.name, id: resource.id }
@@ -115,7 +115,7 @@ accard_frontend_sample_source_collection_update:
     defaults:
         _controller: accard.controller.sample_source:updateAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:sourceUpdate.html.twig
+            template: Theme:Frontend/Sample:sourceUpdate.html.twig
             redirect: accard_frontend_sample_source_collection_index
             form: accard_sample_source_collection
 
@@ -126,7 +126,7 @@ accard_frontend_sample_source_derivation_update:
     defaults:
         _controller: accard.controller.sample_source:updateActiion
         _accard:
-            template: AccardWebBundle:Frontend/Sample:sourceUpdate.html.twig
+            template: Theme:Frontend/Sample:sourceUpdate.html.twig
             redirect: accard_frontend_sample_source_derivation_index
             form: accard_sample_source_derivation
 
@@ -137,7 +137,7 @@ accard_frontend_sample_update:
     defaults:
         _controller: accard.controller.sample:updateAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:update.html.twig
+            template: Theme:Frontend/Sample:update.html.twig
             redirect:
                 route: accard_frontend_sample_index_by_prototype
                 parameters: { prototype: resource.prototype.name, id: resource.id }
@@ -149,7 +149,7 @@ accard_frontend_sample_source_collection_delete:
     defaults:
         _controller: accard.controller.sample_source:deleteAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:delete.html.twig
+            template: Theme:Frontend/Sample:delete.html.twig
             redirect:
                 route: accard_frontend_sample_source_collection_index
                 parameters: { id: resource.id }
@@ -161,7 +161,7 @@ accard_frontend_sample_source_derivation_delete:
     defaults:
         _controller: accard.controller.sample_source:deleteAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:delete.html.twig
+            template: Theme:Frontend/Sample:delete.html.twig
             redirect:
                 route: accard_frontend_sample_source_derivation_index
                 parameters: { id: resource.id }
@@ -173,7 +173,7 @@ accard_frontend_sample_delete:
     defaults:
         _controller: accard.controller.sample:deleteAction
         _accard:
-            template: AccardWebBundle:Frontend/Sample:delete.html.twig
+            template: Theme:Frontend/Sample:delete.html.twig
             redirect:
                 route: accard_frontend_sample_index
                 parameters: { prototype: resource.prototype.name, id: resource.id }
