Fixed issue where search pointed to the wrong bundle

--- a/src/Bundle/WebBundle/Resources/config/routing/frontend/search.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/frontend/search.yml
@@ -8,4 +8,4 @@
 accard_frontend_search:
     path: /
     defaults:
-        _controller: Theme:Search:search
+        _controller: AccardWebBundle:Search:search
