--- a/src/Bundle/PrototypeBundle/Resources/config/services.yml
+++ b/src/Bundle/PrototypeBundle/Resources/config/services.yml
@@ -9,6 +9,7 @@ parameters:
 
     accard.event_subscriber.prototype.load_orm_metadata.class: Accard\Bundle\PrototypeBundle\EventListener\LoadORMMetadataSubscriber
     accard.repository.prototype.class: Accard\Bundle\PrototypeBundle\Doctrine\ORM\PrototypeRepository
+    accard.twig.extension.prototype.class: Accard\Bundle\PrototypeBundle\Twig\PrototypeExtension
 
 services:
 
@@ -24,3 +25,9 @@ services:
         factory_method: getRepository
         arguments:
              - Accard\Component\Prototype\Model\Prototype
+
+    accard.twig.extension.prototype:
+        class: %accard.twig.extension.prototype.class%
+        public: false
+        tags:
+            - { name: twig.extension }
