CPD and HMTB importers restored

--- a/src/Bundle/CPDBundle/Resources/config/services.yml
+++ b/src/Bundle/CPDBundle/Resources/config/services.yml
@@ -9,6 +9,10 @@ parameters:
 
     accard_cpd.controller.class: Accard\Bundle\CPDBundle\Controller\CPDController
     accard.import.importer.cpd_genetic_results.class: Accard\Bundle\CPDBundle\Import\GeneticResultsImporter
+    accard.import.manager.cpd.class: Accard\Bundle\CPDBundle\Import\Manager
+    accard.import.converter.cpd.class: Accard\Bundle\CPDBundle\Import\Converter
+    accard.import.source.cpd.class: Accard\Bundle\CPDBundle\Import\CPDSource
+    accard.import.source.cpd_local.class: Accard\Bundle\CPDBundle\Import\LocalSource
 
 services:
 
@@ -23,8 +27,31 @@ services:
         class: %accard.import.importer.cpd_genetic_results.class%
         arguments:
             - @accard.provider.import_patient
-            - @accard.connection.pds
-            - @doctrine.dbal.default_connection
-            - @accard.provider.activity_prototype
-            - ['205', '205.0', '205.00', '205.01', '205.02']
+            - @accard.import.source.cpd_local
+            - @accard.import.source.cpd
         tags: [{ name: accard.importer, importer: cpd_genetic_results }]
+
+    accard.import.converter.cpd:
+        class: "%accard.import.converter.cpd.class%"
+        arguments:
+            - @accard.provider.sample_prototype
+
+    accard.import.manager.cpd:
+        class: "%accard.import.manager.cpd.class%"
+        arguments:
+            - @accard.import.initializer.default
+            - @accard.import.converter.cpd
+            - @accard.import.persister.default
+        tags: [{ name: accard.manager, manager: cpd_genetic_results }]
+
+    accard.import.source.cpd:
+        class: "%accard.import.source.cpd.class%"
+        arguments:
+            - @accard.connection.pds
+            - ['205', '205.0', '205.00', '205.01', '205.02']
+
+    accard.import.source.cpd_local:
+        class: "%accard.import.source.cpd_local.class%"
+        arguments:
+            - @doctrine.dbal.default_connection
+            - @accard.provider.sample_prototype
