Added Twig extension to retrieve a list of prototypes for a given object.

--- a/src/Bundle/PrototypeBundle/Resources/config/services.yml
+++ b/src/Bundle/PrototypeBundle/Resources/config/services.yml
@@ -28,5 +28,7 @@ services:
 
     accard.twig.extension.prototype:
         class: %accard.twig.extension.prototype.class%
+        calls:
+            - ["setContainer", ["@service_container"]]
         public: false
         tags: [{ name: twig.extension }]
