--- a/src/Bundle/WebBundle/Resources/config/routing/backend/behavior.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/backend/behavior.yml
@@ -11,7 +11,7 @@ accard_backend_behavior_design:
     defaults:
         _controller: accard.controller.behavior:designAction
         _accard:
-            template: AccardWebBundle:Backend/Behavior:design.html.twig
+            template: Theme:Backend/Behavior:design.html.twig
 
 accard_backend_behavior_settings_update:
     pattern: /settings/update
@@ -30,7 +30,7 @@ accard_backend_behavior_prototype_create:
     defaults:
         _controller: accard.controller.behavior_prototype:createAction
         _accard:
-            template: AccardWebBundle:Backend/Behavior:prototypeCreate.html.twig
+            template: Theme:Backend/Behavior:prototypeCreate.html.twig
             redirect:
                 route: accard_backend_behavior_design
                 parameters: { type: prototype, action: create, id: resource.id }
@@ -41,7 +41,7 @@ accard_backend_behavior_prototype_update:
     defaults:
         _controller: accard.controller.behavior_prototype:updateAction
         _accard:
-            template: AccardWebBundle:Backend/Behavior:prototypeUpdate.html.twig
+            template: Theme:Backend/Behavior:prototypeUpdate.html.twig
             redirect:
                 route: accard_backend_behavior_design
                 parameters: { type: prototype, action: update, id: resource.id }
@@ -63,7 +63,7 @@ accard_backend_behavior_field_create:
     defaults:
         _controller: accard.controller.behavior_prototype_field:createAction
         _accard:
-            template: AccardWebBundle:Backend/Behavior:fieldCreate.html.twig
+            template: Theme:Backend/Behavior:fieldCreate.html.twig
             redirect:
                 route: accard_backend_behavior_design
                 parameters: { type: field, action: create, id: resource.id }
@@ -74,7 +74,7 @@ accard_backend_behavior_field_update:
     defaults:
         _controller: accard.controller.behavior_prototype_field:updateAction
         _accard:
-            template: AccardWebBundle:Backend/Behavior:fieldUpdate.html.twig
+            template: Theme:Backend/Behavior:fieldUpdate.html.twig
             redirect:
                 route: accard_backend_behavior_design
                 parameters: { type: field, action: update, id: resource.id }
