--- a/src/Bundle/WebBundle/Resources/config/routing/backend/template.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/backend/template.yml
@@ -6,13 +6,20 @@ accard_backend_template_index:
         _controller: accard.controller.template:indexAction
 
 accard_backend_template_design:
-    pattern: /{name}
+    pattern: /design/{name}/{version}
     methods: [GET, POST]
     defaults:
         _controller: accard.controller.template:designAction
+        version: null
 
 accard_backend_template_create:
     pattern: /create
-    methods: [GET]
+    methods: [GET, POST]
     defaults:
         _controller: accard.controller.template:createAction
+
+accard_backend_template_history:
+    pattern: /history/{name}
+    methods: [GET]
+    defaults:
+        _controller: accard.controller.template:historyAction
