--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "twbs/bootstrap":                        "v3.2.0",
         "friendsofsymfony/elastica-bundle":      "~3.1@dev",
         "lexik/translation-bundle":              "~2.0",
-        "gedmo/doctrine-extensions":             "2.3.11"
+        "gedmo/doctrine-extensions":             "2.3.11",
+        "stof/doctrine-extensions-bundle":       "~1.1@dev"
     }
 }
