--- a/src/Bundle/CoreBundle/Resources/config/services.yml
+++ b/src/Bundle/CoreBundle/Resources/config/services.yml
@@ -66,7 +66,20 @@ services:
         class: %doctrine.oracle.session_listener.class%
         tags: [{ name: doctrine.event_listener, event: postConnect, connection: accard }]
 
-#    kernel.event_listener.json_request_transformer:
-#        class: %accard.json.transformer.listener%
-#        tags:
-#            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 100 }
+     # KernelRequest listener
+    extension.listener:
+        class: Accard\Bundle\CoreBundle\Listener\DoctrineExtensionListener
+        calls:
+             - [ setContainer, [ @service_container ] ]
+        tags:
+            # translatable sets locale after router processing
+            - { name: kernel.event_listener, event: kernel.request, method: onLateKernelRequest, priority: -10 }
+            # loggable hooks user username if one is in security context
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+
+    gedmo.listener.loggable:
+          class: Gedmo\Loggable\LoggableListener
+          tags:
+              - { name: doctrine.event_subscriber, connection: default }
+          calls:
+              - [ setAnnotationReader, [ @annotation_reader ] ]
